[gd_scene load_steps=7 format=3 uid="uid://cg78yrxigq35s"]

[ext_resource type="Script" path="res://levels/level_assets_blender/chest/chest.gd" id="1_3oea3"]
[ext_resource type="ArrayMesh" uid="uid://ddd23al68hqki" path="res://levels/level_assets_blender/chest/chest.obj" id="1_v7k2e"]
[ext_resource type="PackedScene" uid="uid://1jnl31q6vv4q" path="res://scenes/model_19_orange.tscn" id="2_5wmn1"]
[ext_resource type="PackedScene" uid="uid://cifh7otijuhpq" path="res://scenes/model_19_blue.tscn" id="3_hoywf"]
[ext_resource type="PackedScene" uid="uid://yuju5sdhvrdu" path="res://scenes/model_19.tscn" id="4_ufv2l"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jv66i"]
data = PackedVector3Array(-1, 1.4773, -1.197, -1, 1.605, -0.9255, -1, 0.5724, -0.7715, -1, 0.5724, -0.7715, -1, 1.605, -0.9255, -1, 0.7, -0.5, 1, 0.5724, -0.7715, 1, 0.7, -0.5, 1, 1.4773, -1.197, 1, 1.4773, -1.197, 1, 0.7, -0.5, 1, 1.605, -0.9255, -1, 0.5724, -0.7715, -1, 0.7, -0.5, 1, 0.5724, -0.7715, 1, 0.5724, -0.7715, -1, 0.7, -0.5, 1, 0.7, -0.5, 1, 1.4773, -1.197, 1, 1.605, -0.9255, -1, 1.4773, -1.197, -1, 1.4773, -1.197, 1, 1.605, -0.9255, -1, 1.605, -0.9255, -1, 0.5724, -0.7715, 1, 0.5724, -0.7715, -1, 1.4773, -1.197, -1, 1.4773, -1.197, 1, 0.5724, -0.7715, 1, 1.4773, -1.197, -0.9293, 0.764, -0.5301, -0.9293, 1.541, -0.8954, -0.9423, 0.6492, -0.7438, -0.9423, 0.6492, -0.7438, -0.9293, 1.541, -0.8954, -0.9423, 1.4496, -1.1202, 0.9293, 1.541, -0.8954, 0.9293, 0.764, -0.5301, 0.9423, 1.4496, -1.1202, 0.9423, 1.4496, -1.1202, 0.9293, 0.764, -0.5301, 0.9423, 0.6492, -0.7438, 0.9293, 0.764, -0.5301, -0.9293, 0.764, -0.5301, 0.9423, 0.6492, -0.7438, 0.9423, 0.6492, -0.7438, -0.9293, 0.764, -0.5301, -0.9423, 0.6492, -0.7438, -0.9293, 1.541, -0.8954, 0.9293, 1.541, -0.8954, -0.9423, 1.4496, -1.1202, -0.9423, 1.4496, -1.1202, 0.9293, 1.541, -0.8954, 0.9423, 1.4496, -1.1202, 0.9423, 1.4496, -1.1202, 0.9423, 0.6492, -0.7438, -0.9423, 1.4496, -1.1202, -0.9423, 1.4496, -1.1202, 0.9423, 0.6492, -0.7438, -0.9423, 0.6492, -0.7438, 1, 1.605, -0.9255, 1, 0.7, -0.5, 0.9293, 1.541, -0.8954, 0.9293, 1.541, -0.8954, 1, 0.7, -0.5, 0.9293, 0.764, -0.5301, -1, 0.7, -0.5, -1, 1.605, -0.9255, -0.9293, 0.764, -0.5301, -0.9293, 0.764, -0.5301, -1, 1.605, -0.9255, -0.9293, 1.541, -0.8954, -1, 1.605, -0.9255, 1, 1.605, -0.9255, -0.9293, 1.541, -0.8954, -0.9293, 1.541, -0.8954, 1, 1.605, -0.9255, 0.9293, 1.541, -0.8954, 1, 0.7, -0.5, -1, 0.7, -0.5, 0.9293, 0.764, -0.5301, 0.9293, 0.764, -0.5301, -1, 0.7, -0.5, -0.9293, 0.764, -0.5301, -1, 0.7, 0.5, -1, 0, 0.5, -1, 0.7, -0.5, -1, 0.7, -0.5, -1, 0, 0.5, -1, 0, -0.5, 1, 0, -0.5, -1, 0, -0.5, 1, 0, 0.5, 1, 0, 0.5, -1, 0, -0.5, -1, 0, 0.5, 1, 0.7, 0.5, 1, 0, 0.5, -1, 0.7, 0.5, -1, 0.7, 0.5, 1, 0, 0.5, -1, 0, 0.5, -1, 0.7, -0.5, -1, 0, -0.5, 1, 0.7, -0.5, 1, 0.7, -0.5, -1, 0, -0.5, 1, 0, -0.5, 1, 0.7, -0.5, 1, 0, -0.5, 1, 0.7, 0.5, 1, 0.7, 0.5, 1, 0, -0.5, 1, 0, 0.5, -0.9358, 0.6253, -0.4358, -0.9358, 0.6253, 0.4358, -0.9293, 0.7, -0.4293, -0.9293, 0.7, -0.4293, -0.9358, 0.6253, 0.4358, -0.9293, 0.7, 0.4293, -0.9423, 0.0577, 0.4423, -0.9423, 0.0577, -0.4423, 0.9423, 0.0577, 0.4423, 0.9423, 0.0577, 0.4423, -0.9423, 0.0577, -0.4423, 0.9423, 0.0577, -0.4423, -0.9358, 0.6253, 0.4358, 0.9358, 0.6253, 0.4358, -0.9293, 0.7, 0.4293, -0.9293, 0.7, 0.4293, 0.9358, 0.6253, 0.4358, 0.9293, 0.7, 0.4293, 0.9358, 0.6253, -0.4358, -0.9358, 0.6253, -0.4358, 0.9293, 0.7, -0.4293, 0.9293, 0.7, -0.4293, -0.9358, 0.6253, -0.4358, -0.9293, 0.7, -0.4293, 0.9358, 0.6253, 0.4358, 0.9358, 0.6253, -0.4358, 0.9293, 0.7, 0.4293, 0.9293, 0.7, 0.4293, 0.9358, 0.6253, -0.4358, 0.9293, 0.7, -0.4293, 1, 0.7, 0.5, -1, 0.7, 0.5, 0.9293, 0.7, 0.4293, 0.9293, 0.7, 0.4293, -1, 0.7, 0.5, -0.9293, 0.7, 0.4293, -1, 0.7, 0.5, -1, 0.7, -0.5, -0.9293, 0.7, 0.4293, -0.9293, 0.7, 0.4293, -1, 0.7, -0.5, -0.9293, 0.7, -0.4293, -1, 0.7, -0.5, 1, 0.7, -0.5, -0.9293, 0.7, -0.4293, -0.9293, 0.7, -0.4293, 1, 0.7, -0.5, 0.9293, 0.7, -0.4293, 1, 0.7, -0.5, 1, 0.7, 0.5, 0.9293, 0.7, -0.4293, 0.9293, 0.7, -0.4293, 1, 0.7, 0.5, 0.9293, 0.7, 0.4293, 0.9423, 0.0577, 0.4423, 0.9423, 0.0577, -0.4423, 0.9358, 0.6253, 0.4358, 0.9358, 0.6253, 0.4358, 0.9423, 0.0577, -0.4423, 0.9358, 0.6253, -0.4358, 0.9423, 0.0577, -0.4423, -0.9423, 0.0577, -0.4423, 0.9358, 0.6253, -0.4358, 0.9358, 0.6253, -0.4358, -0.9423, 0.0577, -0.4423, -0.9358, 0.6253, -0.4358, -0.9423, 0.0577, 0.4423, 0.9423, 0.0577, 0.4423, -0.9358, 0.6253, 0.4358, -0.9358, 0.6253, 0.4358, 0.9423, 0.0577, 0.4423, 0.9358, 0.6253, 0.4358, -0.9423, 0.0577, -0.4423, -0.9423, 0.0577, 0.4423, -0.9358, 0.6253, -0.4358, -0.9358, 0.6253, -0.4358, -0.9423, 0.0577, 0.4423, -0.9358, 0.6253, 0.4358, 0.9358, 0.6253, -0.4358, 0.9358, 0.6253, 0.4358, -0.9358, 0.6253, -0.4358, -0.9358, 0.6253, -0.4358, 0.9358, 0.6253, 0.4358, -0.9358, 0.6253, 0.4358)

[node name="Chest" type="StaticBody3D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_3oea3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_v7k2e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_jv66i")

[node name="model_19_blue" parent="." instance=ExtResource("3_hoywf")]
transform = Transform3D(-4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, 0, 1, 0)
visible = false

[node name="model_19" parent="." instance=ExtResource("4_ufv2l")]
transform = Transform3D(-4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, 0, 1, 0)
visible = false

[node name="model_19_orange" parent="." instance=ExtResource("2_5wmn1")]
transform = Transform3D(-4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, 0, 1, 0)
visible = false
